fixed jenkins job issues by modifying pom.xml